fix spacing

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -67,7 +67,7 @@ img {
     column-gap: 10px;
   }
   @media(max-width: 770px){
-    grid-template-columns: calc(50% - 15px) calc(50% - 15px);
+    grid-template-columns: calc(50% - 5px) calc(50% - 5px);
     column-gap: 10px;
   }
   .display-date{
